updated all section

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+/* @font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Bold.ttf');
+	font-weight: 700;
+}
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Medium.ttf');
+	font-weight: 500;
+} */
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Book.ttf');
+	font-weight: 400;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -60,7 +76,7 @@ body{
 
 /************ NavBar css *******888*/
 .NavBar{
-  background-color:Blue;
+  background-color:red;
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -218,4 +234,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	border-color: transparent;
+}
+
+.row{
+
+  margin-left: 0 !important;
+}
+
+.exp-backL{
+  /* background: #19376d; */
+  background: linear-gradient(90deg, red 0%, rgba(25, 55, 109, 0) 100%);
+}
+
+.exp-backR{
+  /* background: #19376d; */
+  background: linear-gradient(-90deg, red 0%, rgba(25, 55, 109, 0) 100%);
 }
